{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 969,
  "lineage": "88c432e5-3c72-0dc7-3ff8-416ea854b320",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "td-gke-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gke-envoy-setup/zones/us-central1-a/networkEndpointGroups/service-test-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 5,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-01-06T01:05:44.869-08:00",
            "enable_cdn": false,
            "fingerprint": "-DILRIOXEV0=",
            "health_checks": [
              "projects/gke-envoy-setup/global/healthChecks/td-gke-health-check"
            ],
            "id": "projects/gke-envoy-setup/global/backendServices/td-gke-service",
            "load_balancing_scheme": "INTERNAL_SELF_MANAGED",
            "name": "td-gke-service",
            "port_name": "http",
            "project": "gke-envoy-setup",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-envoy-setup/global/backendServices/td-gke-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_client_config.default",
            "data.google_compute_network_endpoint_group.gcpneg",
            "data.google_container_cluster.default",
            "data.local_file.firewall",
            "google_compute_health_check.td-gke-health-check",
            "google_container_cluster.traffic-director-cluster",
            "kubernetes_secret.istio-sidecar-injector",
            "null_resource.deploy_kubernetes_service",
            "null_resource.deploy_sample_client",
            "null_resource.deploy_sidecar_injector",
            "null_resource.enable_sidecar_injector",
            "null_resource.get_credentials",
            "null_resource.get_firewall_details",
            "null_resource.secret_ns_creation",
            "null_resource.update_firewall_rule",
            "tls_private_key.privatekey",
            "tls_self_signed_cert.cakey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-allow-health-checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-06T00:59:20.098-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gke-envoy-setup/global/firewalls/fw-allow-health-checks",
            "log_config": [],
            "name": "fw-allow-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-envoy-setup/global/networks/default",
            "priority": 1000,
            "project": "gke-envoy-setup",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-envoy-setup/global/firewalls/fw-allow-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "td-gke-forwarding-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/gke-envoy-setup/global/forwardingRules/td-gke-forwarding-rule",
            "ip_address": "0.0.0.0",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_SELF_MANAGED",
            "name": "td-gke-forwarding-rule",
            "network": "default",
            "port_range": "80",
            "project": "gke-envoy-setup",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-envoy-setup/global/forwardingRules/td-gke-forwarding-rule",
            "target": "projects/gke-envoy-setup/global/targetHttpProxies/td-gke-proxy"
          },
          "dependencies": [
            "data.google_client_config.default",
            "data.google_compute_network_endpoint_group.gcpneg",
            "data.google_container_cluster.default",
            "data.local_file.firewall",
            "google_compute_backend_service.td-gke-service",
            "google_compute_health_check.td-gke-health-check",
            "google_compute_target_http_proxy.td-gke-proxy",
            "google_compute_url_map.td-gke-url-map",
            "google_container_cluster.traffic-director-cluster",
            "kubernetes_secret.istio-sidecar-injector",
            "null_resource.deploy_kubernetes_service",
            "null_resource.deploy_sample_client",
            "null_resource.deploy_sidecar_injector",
            "null_resource.enable_sidecar_injector",
            "null_resource.get_credentials",
            "null_resource.get_firewall_details",
            "null_resource.secret_ns_creation",
            "null_resource.update_firewall_rule",
            "tls_private_key.privatekey",
            "tls_self_signed_cert.cakey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "td-gke-proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-06T01:06:41.073-08:00",
            "id": "projects/gke-envoy-setup/global/targetHttpProxies/td-gke-proxy",
            "name": "td-gke-proxy",
            "project": "gke-envoy-setup",
            "proxy_bind": false,
            "proxy_id": 2792495517494041166,
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-envoy-setup/global/targetHttpProxies/td-gke-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/gke-envoy-setup/global/urlMaps/td-gke-url-map"
          },
          "dependencies": [
            "data.google_client_config.default",
            "data.google_compute_network_endpoint_group.gcpneg",
            "data.google_container_cluster.default",
            "data.local_file.firewall",
            "google_compute_backend_service.td-gke-service",
            "google_compute_health_check.td-gke-health-check",
            "google_compute_url_map.td-gke-url-map",
            "google_container_cluster.traffic-director-cluster",
            "kubernetes_secret.istio-sidecar-injector",
            "null_resource.deploy_kubernetes_service",
            "null_resource.deploy_sample_client",
            "null_resource.deploy_sidecar_injector",
            "null_resource.enable_sidecar_injector",
            "null_resource.get_credentials",
            "null_resource.get_firewall_details",
            "null_resource.secret_ns_creation",
            "null_resource.update_firewall_rule",
            "tls_private_key.privatekey",
            "tls_self_signed_cert.cakey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "td-gke-url-map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-06T01:06:28.720-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/gke-envoy-setup/global/backendServices/td-gke-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "pyFYNN_oV6A=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "service-test"
                ],
                "path_matcher": "td-gke-path-matcher"
              }
            ],
            "id": "projects/gke-envoy-setup/global/urlMaps/td-gke-url-map",
            "map_id": 6896358767644531323,
            "name": "td-gke-url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/gke-envoy-setup/global/backendServices/td-gke-service",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "td-gke-path-matcher",
                "path_rule": [],
                "route_rules": []
              }
            ],
            "project": "gke-envoy-setup",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-envoy-setup/global/urlMaps/td-gke-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_client_config.default",
            "data.google_compute_network_endpoint_group.gcpneg",
            "data.google_container_cluster.default",
            "data.local_file.firewall",
            "google_compute_backend_service.td-gke-service",
            "google_compute_health_check.td-gke-health-check",
            "google_container_cluster.traffic-director-cluster",
            "kubernetes_secret.istio-sidecar-injector",
            "null_resource.deploy_kubernetes_service",
            "null_resource.deploy_sample_client",
            "null_resource.deploy_sidecar_injector",
            "null_resource.enable_sidecar_injector",
            "null_resource.get_credentials",
            "null_resource.get_firewall_details",
            "null_resource.secret_ns_creation",
            "null_resource.update_firewall_rule",
            "tls_private_key.privatekey",
            "tls_self_signed_cert.cakey"
          ]
        }
      ]
    }
  ]
}